--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN1hJ+RKwVKX9GFouzH7nOh"
+      "authorship_tag": "ABX9TyOgoSN95qbSA0Pk2vtYa1vq"
     },
     "kernelspec": {
       "name": "python3",
@@ -3445,37 +3445,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uv6rhi_2w_6g",
-        "outputId": "2c2eefef-33f9-4e3f-9dae-110b99fb2db6"
+        "outputId": "d725b85b-3029-4f5c-8d0f-b2d36884e4cf"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "enter decimal number12\n",
-            "1100\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#alternative\n",
-        "n=int(input(\"enter decimal number\"))\n",
-        "s=\"\"\n",
-        "r=bin(n)\n",
-        "print(r[2:])"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "UPo49cC5zNiN",
-        "outputId": "31d49192-0ea3-420c-e5aa-889dd1c742ea"
-      },
-      "execution_count": 16,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -3490,70 +3462,201 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Python Program to convert Decimal number to Octal number.\n"
+        "Python Program to check the given year is a leap year or not.\n"
       ],
       "metadata": {
-        "id": "F27a9EEe0KHI"
+        "id": "eYwPJ7jhi10w"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "n=int(input(\"enter decimal number\"))\n",
-        "s=\"\"\n",
-        "while(n>0):\n",
-        "  r=n%8\n",
-        "  n=n//8\n",
-        "  s+=str(r)\n",
-        "binary = int(s[::-1])\n",
-        "print(binary)\n"
+        "n=int(input(\"enter year\"))\n",
+        "if n%4==0:\n",
+        "  print(\"leap year\")\n",
+        "else:\n",
+        "  print(\"no leap year\")\n"
       ],
       "metadata": {
-        "id": "_k9_SWBA0hXR",
-        "outputId": "13efdf3d-cccc-4489-805c-7e6fe2551fb2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GoHcdpUGzINS",
+        "outputId": "1f89f853-d941-44fc-c421-f86c668b84cb"
       },
-      "execution_count": 18,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "enter decimal number972\n",
-            "1714\n"
+            "enter year2024\n",
+            "leap year\n"
           ]
         }
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "#alternative\n",
-        "n=int(input(\"enter decimal number\"))\n",
-        "s=\"\"\n",
-        "r=oct(n)\n",
-        "print(r[2:])"
+        "Python Program to convert Celsius to Fahrenheit.\n"
       ],
       "metadata": {
-        "id": "rznweq1y0Jvb",
-        "outputId": "65a6694e-a1ce-4f98-bdd1-1c2d0f8fb94c",
+        "id": "Pish4j6mkf6P"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "celsius=int(input(\"enter the celsius\"))\n",
+        "fahrenheit=celsius*(9/5)+32\n",
+        "print(f\"fahrenheit{fahrenheit}\")"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6VW2WVU-ktZ_",
+        "outputId": "481c44c4-a616-4dbe-d56d-8bb5a20cbaa1"
       },
-      "execution_count": 17,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "enter decimal number972\n",
-            "1714\n"
+            "enter the celsius25\n",
+            "fahrenheit77.0\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Python Program to convert Fahrenheit to celsius.\n"
+      ],
+      "metadata": {
+        "id": "hwaSMNANlNym"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fahrenheit=int(input(\"enter the fahrenheit\"))\n",
+        "celsius=(fahrenheit-32)*(5/9)\n",
+        "print(f\"celsius: {celsius}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RRkIUGh3lIR1",
+        "outputId": "baf57133-f0d8-4791-ae0d-63ca7fa0af0a"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the fahrenheit77\n",
+            "celsius: 25.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Python program to calculate Simple Interest with explanation.\n"
+      ],
+      "metadata": {
+        "id": "9Unk-igemAEH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p = float(input(\"Enter the principal amount: \"))\n",
+        "n = float(input(\"Enter the number of years: \"))\n",
+        "r = float(input(\"Enter the rate of interest: \"))\n",
+        "\n",
+        "simple_interest = p * n * r\n",
+        "\n",
+        "print(f\"Simple Interest: {simple_interest}\")\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RlMLESmvl_Bc",
+        "outputId": "167e4b03-e87a-4f2b-b60a-f6549ae60a66"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the principal amount: 10000\n",
+            "Enter the number of years: 2\n",
+            "Enter the rate of interest: 0.05\n",
+            "Simple Interest: 1000.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Python program to calculate compound intrest\n"
+      ],
+      "metadata": {
+        "id": "8oWMuoY1pklj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p=float(input(\"enter the principal amount\"))\n",
+        "n=float(input(\"enter number of years\"))\n",
+        "r=float(input(\"enterrate of intrest\"))\n",
+        "compound_intrest=p*((1+r)**n)-p\n",
+        "print(f\"compound intrest: {compound_intrest}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Iizcm1r9p4sm",
+        "outputId": "29c0da25-3fe5-4928-c48e-a22db6770779"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the principal amount10000\n",
+            "enter number of years2\n",
+            "enterrate of intrest0.05\n",
+            "compound intrest: 1025.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "90 programs completed"
+      ],
+      "metadata": {
+        "id": "JolPKTverchG"
+      }
     }
   ]
 }
