--- a/python2.ipynb
+++ b/python2.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNkZzSNhBKSekc9TR/n9uJf"
+      "authorship_tag": "ABX9TyPL8Lb3wUNAXxqfxDm7LTJU",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/fathimar33/python_programs/blob/main/python2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -58,6 +69,86 @@
           "name": "stdout",
           "text": [
             "probability of getting heads: 0.7000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "find the probability of getting red in a deck of 52 cards"
+      ],
+      "metadata": {
+        "id": "9QyIhBW8BVtd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "card_grp=[\"clubs\",\"diamond\",\"hearts\",\"spades\"]\n",
+        "card=[\"Ace\",\"2\",\"3\",\"4\",\"5\",\"6\",\"7\",\"8\",\"9\",\"10\",\"king\",\"jack\",\"queen\"]\n",
+        "l=[[i,j] for i in card_grp for j in card]\n",
+        "count_red=len([m for m in l if m[0]  in(\"diamond\",\"hearts\")])\n",
+        "print(f\"probability of picking red card\",count_red/len(l))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "77RjlT0RBwF5",
+        "outputId": "4d297c7c-0041-4974-f6b2-b35fe8976632"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "probability of picking red card 0.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "find the probability of getting even number in rolling a dice(two die)"
+      ],
+      "metadata": {
+        "id": "URuB53OWMxmO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "s = [[random.randint(1, 6), random.randint(1, 6)] for _ in range(36)]\n",
+        "print(s)\n",
+        "\n",
+        "count = len([pair for pair in s if (pair[0] + pair[1]) % 2 == 0])\n",
+        "print(count)\n",
+        "\n",
+        "probability = count / len(s)\n",
+        "print(f\"Probability of getting even numbers in rolling two dice: {probability:.2f}\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tz8hzo3INay9",
+        "outputId": "320468ed-cac1-4b80-a406-8062a1b5a003"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[6, 4], [1, 3], [2, 5], [5, 5], [2, 6], [5, 5], [4, 5], [5, 3], [3, 6], [4, 3], [6, 4], [5, 3], [6, 6], [1, 1], [2, 5], [5, 4], [2, 5], [4, 6], [2, 1], [6, 6], [2, 6], [6, 3], [5, 6], [1, 2], [3, 2], [4, 6], [3, 3], [1, 5], [6, 1], [3, 5], [2, 3], [3, 1], [4, 2], [5, 3], [6, 1], [6, 5]]\n",
+            "20\n",
+            "Probability of getting even numbers in rolling two dice: 0.56\n"
           ]
         }
       ]
