--- a/python2.ipynb
+++ b/python2.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPL8Lb3wUNAXxqfxDm7LTJU",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPL8Lb3wUNAXxqfxDm7LTJU"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +17,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/fathimar33/python_programs/blob/main/python2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "find the probability of getting heads in tossing a coin 10 times"
       ],
@@ -37,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "VQ4bMazy_Dxq"
       },
@@ -62,7 +51,7 @@
         "id": "KZUIqRAg_b3F",
         "outputId": "72ad51a2-4fc9-416c-ffed-17bb9d60681d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +87,7 @@
         "id": "77RjlT0RBwF5",
         "outputId": "4d297c7c-0041-4974-f6b2-b35fe8976632"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +129,7 @@
         "id": "tz8hzo3INay9",
         "outputId": "320468ed-cac1-4b80-a406-8062a1b5a003"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
