--- a/python2.ipynb
+++ b/python2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPL8Lb3wUNAXxqfxDm7LTJU"
+      "authorship_tag": "ABX9TyPiK5Gf9JzvruEXR5qivI+K"
     },
     "kernelspec": {
       "name": "python3",
@@ -138,6 +138,144 @@
             "[[6, 4], [1, 3], [2, 5], [5, 5], [2, 6], [5, 5], [4, 5], [5, 3], [3, 6], [4, 3], [6, 4], [5, 3], [6, 6], [1, 1], [2, 5], [5, 4], [2, 5], [4, 6], [2, 1], [6, 6], [2, 6], [6, 3], [5, 6], [1, 2], [3, 2], [4, 6], [3, 3], [1, 5], [6, 1], [3, 5], [2, 3], [3, 1], [4, 2], [5, 3], [6, 1], [6, 5]]\n",
             "20\n",
             "Probability of getting even numbers in rolling two dice: 0.56\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "probability of getting 3,4 and 5\n",
+        "\n",
+        "\n",
+        "1.   3 in first throw\n",
+        "2.   4 in second throw and subsequently 5 in third row\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Zx1bKNj2l4S-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l=[1,2,3,4,5,6]\n",
+        "p=1\n",
+        "for i in [3,4,5]:\n",
+        "  if i in l:\n",
+        "    p*=1/len(l)\n",
+        "print(f\"probability : {round(p,5)}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8E6GK15Jqh5F",
+        "outputId": "3997bb48-9e17-49d6-87f8-99c81e479870"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "probability : 0.00463\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "probobaility of getting 3 or 4 or 5"
+      ],
+      "metadata": {
+        "id": "V-mEiWcsqkMr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random "
+      ],
+      "metadata": {
+        "id": "TDqEnOnaog6y"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l=[1,2,3,4,5,6]\n",
+        "p_3_4_5=0\n",
+        "for i in l:\n",
+        "  if i==3 or i==4 or i==5:\n",
+        "    p_3_4_5+=1\n",
+        "print(f\"probability : {p_3_4_5/len(l)}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sAvN2QYLl3xw",
+        "outputId": "55a9f57a-f0d4-47fd-ccf4-a9800e456af5"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "probability : 0.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "class of 80 students\n",
+        "40 percent-munich\n",
+        "60-johannesburg\n",
+        "30-both\n",
+        "\n",
+        "\n",
+        "> what is the proportion of students prefered one location\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "No4xjuo5u9BR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p_a=0.4\n",
+        "p_b=0.6\n",
+        "p_a_in_b=0.3\n",
+        "p_a_or_b=p_a+p_b-p_a_in_b\n",
+        "print(f\"proportion of students prefered one location {p_a_or_b}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hwAVMndPvZ3x",
+        "outputId": "eb1ba9dd-8c17-43a7-fb77-6edbd2fca9b6"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "proportion of students prefered one location 0.7\n"
           ]
         }
       ]
