--- a/python2.ipynb
+++ b/python2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1jomNwfK73aSQynvZMgExKJ7AuGmVMcig",
-      "authorship_tag": "ABX9TyPhWPBXGGSmkaKGlCxgTgAr"
+      "authorship_tag": "ABX9TyMIvQrAFTWPBqb4iWfoph9d"
     },
     "kernelspec": {
       "name": "python3",
@@ -2954,13 +2954,53 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#bayes theorem\n",
+        "#used in classification problem\n",
+        "In a bolt factory, three machines M₁, M₂, and M₃ manufacture 2000, 2500, and 4000 bolts every day. Of their output 3%, 4%, and 2.5% are defective bolts. One of the bolts is drawn very randomly from a day’s production and is found to be defective. What is the probability that it was produced by machine M₂?\n"
+      ],
+      "metadata": {
+        "id": "axMHGIyVJ2yc"
+      }
+    },
+    {
       "cell_type": "code",
+      "source": [
+        "#probability of m1=no of bolts produced by m1/total no of bolts produced\n",
+        "p_m1=round(2000/9500,2)\n",
+        "p_m2=round(2500/9500,2)\n",
+        "p_m3=round(4000/9500,2)\n",
+        "p_d_m1=0.03\n",
+        "p_d_m2=0.04\n",
+        "p_d_m3=0.025\n",
+        "p_m2_d=(p_m2*p_d_m2)/(p_d_m2*p_m1+p_m2*p_d_m2+p_d_m3*p_m3)\n",
+        "print(f\"probability that it was produced by machine M₂ {round(p_m2_d,2)}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i9uBJUHaJ8u_",
+        "outputId": "649595b7-264a-475d-c089-77dff2e2e4c4"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "probability that it was produced by machine M₂ 0.35\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [],
       "metadata": {
-        "id": "a1K8pfCIKmf6"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "5Q34u3AwOG_i"
+      }
     }
   ]
 }
