--- a/python_programs.ipynb
+++ b/python_programs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMOdQAgFh8LdDcYFt47XN2V"
+      "authorship_tag": "ABX9TyP2ratWc0R9lEaJKVDY5Sn+"
     },
     "kernelspec": {
       "name": "python3",
@@ -26,23 +26,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "qLMe4S7fMB1h",
-        "outputId": "fa6363bd-705c-4fdd-8893-0beb385f7675"
+        "outputId": "5d11fd65-cf62-4891-a3ae-b0820c42121a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter the number ypu want to checkss\n",
+            "Enter the number you want to checkinp\n",
             "Invalid input.You must enter an integer\n",
-            "Enter the number ypu want to check2\n",
-            "The number 2 is even\n"
+            "Enter the number you want to check23\n",
+            "The number 23 is odd\n"
           ]
         }
       ],
@@ -53,7 +53,7 @@
         "  def get_input(self):\n",
         "    while True:\n",
         "      try:\n",
-        "        self.a=int(input(\"Enter the number ypu want to check\"))\n",
+        "        self.a=int(input(\"Enter the number you want to check\"))\n",
         "        break\n",
         "      except ValueError:\n",
         "        print(\"Invalid input.You must enter an integer\")\n",
@@ -67,6 +67,15 @@
         "obj=odd_even()\n",
         "obj.check()\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "yooy6FjFRGDU"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
