--- a/python_programs.ipynb
+++ b/python_programs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2ratWc0R9lEaJKVDY5Sn+"
+      "authorship_tag": "ABX9TyOCq+uzWFseyizrRGTP/Mlm"
     },
     "kernelspec": {
       "name": "python3",
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -69,13 +69,44 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "To check if the number is prime or not"
+      ],
       "metadata": {
-        "id": "yooy6FjFRGDU"
+        "id": "G8dqOqwINkCr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def check_prime(n):\n",
+        "  for i in range(2,n):\n",
+        "    if(n%i==0):\n",
+        "      print(\"not prime\")\n",
+        "      break\n",
+        "  print(\"prime\")\n",
+        "n=int(input(\"enter the number\"))\n",
+        "check_prime(n)"
+      ],
+      "metadata": {
+        "id": "yooy6FjFRGDU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3236468a-249f-49dc-b17a-83cfe742dcdd"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the number3\n",
+            "prime\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
