--- a/python_programs.ipynb
+++ b/python_programs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOCq+uzWFseyizrRGTP/Mlm"
+      "authorship_tag": "ABX9TyOzh88ao/bcnvKZNgFhlXYw"
     },
     "kernelspec": {
       "name": "python3",
@@ -96,7 +96,7 @@
         },
         "outputId": "3236468a-249f-49dc-b17a-83cfe742dcdd"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,13 +109,42 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Write a Python factorial program using ternary operators."
+      ],
       "metadata": {
-        "id": "nglN5tsZQ12k"
+        "id": "CZYgdizrUx9M"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def factorial(n):\n",
+        "  return 1 if n==0 else n*factorial(n-1)\n",
+        "n=int(input(\"enter the number\"))\n",
+        "a=factorial(n)\n",
+        "print(f\"factorial of a number is {a}\")\n",
+        "    "
+      ],
+      "metadata": {
+        "id": "nglN5tsZQ12k",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "202d060e-9833-4d37-ea45-ee0e6d8fecaa"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the number5\n",
+            "factorial of a number is 120\n"
+          ]
+        }
+      ]
     }
   ]
 }
