--- a/python_programs.ipynb
+++ b/python_programs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOzh88ao/bcnvKZNgFhlXYw"
+      "authorship_tag": "ABX9TyNLJgwfBQNaVC0Q/+RvRqRl"
     },
     "kernelspec": {
       "name": "python3",
@@ -134,7 +134,7 @@
         },
         "outputId": "202d060e-9833-4d37-ea45-ee0e6d8fecaa"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,6 +142,51 @@
           "text": [
             "enter the number5\n",
             "factorial of a number is 120\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "find the armstrong of a number"
+      ],
+      "metadata": {
+        "id": "AN84cmhHh2A8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=input(\"enter the number\")\n",
+        "n1=len(n)\n",
+        "sum=0\n",
+        "for i in n:\n",
+        "  num=int(i)\n",
+        "  p=pow(num,n1)\n",
+        "  sum+=p\n",
+        "if int(n)==sum:\n",
+        "  print(f\"The given number {n} is armstrong\")\n",
+        "else:\n",
+        "  print(f\"The given number {n} is not armstrong\")\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ehamBOIbh8Hq",
+        "outputId": "89b05841-3ee6-4e5b-bc92-221e64113811"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the number153\n",
+            "The given number 153 is armstrong\n"
           ]
         }
       ]
