--- a/python_programs.ipynb
+++ b/python_programs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNLJgwfBQNaVC0Q/+RvRqRl"
+      "authorship_tag": "ABX9TyMeVayuve/CMYQ+dQ+vNBAF"
     },
     "kernelspec": {
       "name": "python3",
@@ -125,7 +125,7 @@
         "n=int(input(\"enter the number\"))\n",
         "a=factorial(n)\n",
         "print(f\"factorial of a number is {a}\")\n",
-        "    "
+        ""
       ],
       "metadata": {
         "id": "nglN5tsZQ12k",
@@ -179,7 +179,7 @@
         "id": "ehamBOIbh8Hq",
         "outputId": "89b05841-3ee6-4e5b-bc92-221e64113811"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,6 +187,54 @@
           "text": [
             "enter the number153\n",
             "The given number 153 is armstrong\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Multiplication table using for loop"
+      ],
+      "metadata": {
+        "id": "zCLjpBzoAisw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=int(input(\"enter the table\"))\n",
+        "i=int(input(\"enter the starting number\"))\n",
+        "l=int(input(\"enter the last number\"))\n",
+        "for m in range(i,l+1):\n",
+        "  print(f\"{m} * {n} = {m*n}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oCTpM5BMAiQw",
+        "outputId": "580e0e38-1ef1-4a55-9ae3-d09e456ea648"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the table2\n",
+            "enter the starting number1\n",
+            "enter the last number10\n",
+            "1 * 2 = 2\n",
+            "2 * 2 = 4\n",
+            "3 * 2 = 6\n",
+            "4 * 2 = 8\n",
+            "5 * 2 = 10\n",
+            "6 * 2 = 12\n",
+            "7 * 2 = 14\n",
+            "8 * 2 = 16\n",
+            "9 * 2 = 18\n",
+            "10 * 2 = 20\n"
           ]
         }
       ]
