--- a/python_programs.ipynb
+++ b/python_programs.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNb3COvAFt54viLs7rdxuBt"
+      "authorship_tag": "ABX9TyOz0GZg6yGrBXt26hnYWBak",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/fathimar33/python_programs/blob/main/python_programs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -61,6 +72,17 @@
     {
       "cell_type": "code",
       "source": [
+        "im"
+      ],
+      "metadata": {
+        "id": "ILZhOVIy0i7t"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import pandas as pd\n",
         "id=[1001,1002,1003]\n",
         "name=[\"fathi\",\"ini\",\"chandru\"]\n",
@@ -72,7 +94,7 @@
       "metadata": {
         "id": "MQfQPqHyEqIV"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -88,7 +110,7 @@
         "id": "h6jkWMBXIKyw",
         "outputId": "d4f68fd7-76b2-41b9-a6e9-e229d6bcd82d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -237,7 +259,7 @@
         "id": "bxlxkOS0IlRv",
         "outputId": "474ca441-b5b5-4296-9c6a-67ff0b1b168c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -565,43 +587,56 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "filter function in python is used to filter based on our requirement"
+      ],
+      "metadata": {
+        "id": "62500ueGKNrw"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "n=int(input(\"enter the table\"))\n",
-        "i=int(input(\"enter the starting number\"))\n",
-        "l=int(input(\"enter the last number\"))\n",
-        "for m in range(i,l+1):\n",
-        "  print(f\"{m} * {n} = {m*n}\")\n"
+        "def func(var):\n",
+        "  if var in[\"chennai\"]:\n",
+        "    return True\n",
+        "  else:\n",
+        "    return False\n",
+        "\n",
+        "\n",
+        "seq=[\"chennai\",\"kolkata\",\"chennai\"]\n",
+        "result=filter(func,seq)\n",
+        "for i in result:\n",
+        "  print(i)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "oCTpM5BMAiQw",
-        "outputId": "580e0e38-1ef1-4a55-9ae3-d09e456ea648"
+        "id": "Cy9v3jsPKNXx",
+        "outputId": "d74df610-88a7-423f-d6b2-ee5fbf31e5af"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "enter the table2\n",
-            "enter the starting number1\n",
-            "enter the last number10\n",
-            "1 * 2 = 2\n",
-            "2 * 2 = 4\n",
-            "3 * 2 = 6\n",
-            "4 * 2 = 8\n",
-            "5 * 2 = 10\n",
-            "6 * 2 = 12\n",
-            "7 * 2 = 14\n",
-            "8 * 2 = 16\n",
-            "9 * 2 = 18\n",
-            "10 * 2 = 20\n"
+            "chennai\n",
+            "chennai\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wQu0O2-RLy6u"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
