--- a/python_programs.ipynb
+++ b/python_programs.ipynb
@@ -4,8 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOz0GZg6yGrBXt26hnYWBak",
-      "include_colab_link": true
+      "mount_file_id": "1u8k3E0I96EfgRyr7BDhrdU_jln-C-FhK",
+      "authorship_tag": "ABX9TyOz+pJy1u+4oLKYQPOhXXCh"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/fathimar33/python_programs/blob/main/python_programs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -596,44 +586,61 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "to check vowels present in the string"
+      ],
+      "metadata": {
+        "id": "i_ny4mM2QkKu"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def func(var):\n",
-        "  if var in[\"chennai\"]:\n",
+        "  if var in[\"a\",\"e\",\"i\",\"o\",\"u\"]:\n",
         "    return True\n",
         "  else:\n",
         "    return False\n",
         "\n",
         "\n",
-        "seq=[\"chennai\",\"kolkata\",\"chennai\"]\n",
+        "seq=\"fathima\"\n",
         "result=filter(func,seq)\n",
+        "print(\"vowels in the given string:\")\n",
         "for i in result:\n",
-        "  print(i)"
+        "  print(i,end=\" \")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Cy9v3jsPKNXx",
-        "outputId": "d74df610-88a7-423f-d6b2-ee5fbf31e5af"
+        "outputId": "e4777ed7-3801-4cd2-cc76-6c0a1d1a5d53"
       },
-      "execution_count": 2,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "chennai\n",
-            "chennai\n"
+            "vowels in the given string:\n",
+            "a i a "
           ]
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "cJHzGAXbRR3N"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "wQu0O2-RLy6u"
+        "id": "LYBS6VwvPgoa"
       },
       "execution_count": null,
       "outputs": []
