--- a/python_programs.ipynb
+++ b/python_programs.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1u8k3E0I96EfgRyr7BDhrdU_jln-C-FhK",
-      "authorship_tag": "ABX9TyOz+pJy1u+4oLKYQPOhXXCh"
+      "authorship_tag": "ABX9TyMa1UYlgH0wD/f6PRhGXHZo"
     },
     "kernelspec": {
       "name": "python3",
@@ -631,16 +631,47 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "to check whether the number is even or not using lambda and filter function"
+      ],
       "metadata": {
         "id": "cJHzGAXbRR3N"
       }
     },
     {
       "cell_type": "code",
+      "source": [
+        "seq=[1,2,3,4,5,6,7,8,9]\n",
+        "\n",
+        "l=filter(lambda x:x%2==0,seq)\n",
+        "print(\"even numbers in the list\")\n",
+        "for i in l:\n",
+        "  print(i,end=\" \")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LYBS6VwvPgoa",
+        "outputId": "d0a5089e-3f57-434c-e28e-cbb4bdcb7a33"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "even numbers in the list\n",
+            "2 4 6 8 "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "LYBS6VwvPgoa"
+        "id": "2xm4PYtKTCuD"
       },
       "execution_count": null,
       "outputs": []
